tests/errors/defstest/EXORASS_9006.c
 int main()
{
   float a=0,r;
   int b[1]={3};
   
    r=a ^= b[0];
   print ("a 3.000000");
   printid(a);

   return 0;
}
